# cs211-projet

./: .gitignore  README.md
C++/: .gitignore  CMakeLists.txt  main.cpp
C++/src/: Camera.cpp  Camera.h  imageProcessing.cpp  imageProcessing.h  main.cpp
Game/: ClosedCylinder.java  Color.java  Game.pde  GameModes.java  HScrollbar.java  HUD.java  HoughComparator.java  Mover.java  OpenCylinder.java  Plate.java  Quad.java  SubScreen.java  TwoDThreeD.java  ValueUtils.java  VideoStream.java  VideoStream.pde
Game/data/: VideoStream - Copy.java
InteractiveProjections/: InteractiveProjections.pde
Projections/: Projections.pde
QuadDetection/: HSVBounds.java  Quad.java  QuadDetection.pde  QuadGraph.java
TangibleGame/: ClosedCylinder.java  Color.java  HSVBounds.java  HScrollbar.java  HUD.java  Mover.java  OpenCylinder.java  Plate.java  QuadGraph.java  SubScreen.java  SynchronizedRotationValue.java  TangibleGame.pde  VideoStream.java
java/src/Milestone2_QuadDetection/: HSVBounds.java  HoughComparator.java  Main.java  Quad.java  QuadGraph.java
java/src/ProcessingFiles/Test/: BlurTest.java  SobelTest.java
java/src/ProcessingFiles/VideoCapture/: HSVBounds.java  ImageViewer.java  ParHSVFiltering.java  Quad.java  QuadGraph.java  VideoStream.java
java/src/ProcessingFiles/imageFilter/: HScrollbar.java  HoughComparator.java  imageFilter.java  imageFilter.pde
src/Assignments/: Assignment2.java
src/ProcessingFiles/imageFilter/: imageFilter.pde
src/ch/epfl/cs211/: Assignment3.java  Example.java  Example2.java  (+3 more)
src/processing_files/Game/: HUD.java  Mover.java  OpenCylinder.java
src/processing_files/InteractiveProjections/: InteractiveProjections.java  InteractiveProjections.pde
src/processing_files/Projections/: Projections.pde
(+41 files in other folders)
